# daily-diet-flask

./: README.md  app.py  database.py  pyproject.toml
models/: meal.py
resources/: diet_meal _API.postman_collection.json
