[tool.poetry]
name = "daily-diet-flask"
version = "0.1.0"
description = "A Flask API to inform a daily meal diet"
authors = ["Vinícius"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
werkzeug = "^3.0.3"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
